@@ -11,6 +11,7 @@
         <file>pixmaps/filesave.png</file>
         <file>pixmaps/filesaveas.png</file>
         <file>pixmaps/mnemosyne.png</file>
-        <file>pixmaps/statistics.png</file>
+        <file>pixmaps/statistics.png</file>        
+        <file>pixmaps/silence.mp3</file>
     </qresource>
 </RCC>
