@@ -1,6 +1,7 @@
 -import mem file
 -map type
-
+-controls for media
+	
 	
 MNEMOSYNE 2.0
 
